--- a/auth0.cabal
+++ b/auth0.cabal
@@ -1,5 +1,5 @@
 name:                auth0
-version:             0.2.5
+version:             0.3.0
 synopsis:            REST client for Auth0
 description:         REST client for Auth0
 homepage:            https://github.com/collegevine/auth0#readme
@@ -19,12 +19,16 @@ library
                      , Web.Auth0
                      , Web.Auth0.Authentication
                      , Web.Auth0.Management
+                     , Web.Auth0.JWT
   other-modules:       Web.Auth0.Common
   build-depends:       base >= 4.7 && < 5
                      , mtl >= 2.1.3.1
                      , time >= 1.5.0.1
                      , bytestring >= 0.10.6.0
+                     , base16-bytestring >= 0.1.1.6
+                     , base64-bytestring >= 1.0.0.1
                      , text >= 1.2.2.1
+                     , cryptonite >= 0.15
                      , containers >= 0.5.6.2
                      , unordered-containers >= 0.2.5.1
                      , lens >= 4.13
